# image-anonymization-on-ES

./: .gitignore  LICENSE  README.md  decode.py  main.py  partitions.csv  partitions2.csv  sdkconfig.defaults.esp32p4
main/: CMakeLists.txt  app_main.cpp  idf_component.yml
